syntax = "proto3";

package account;

option java_multiple_files = true;
option java_package = "grpc.account.check";

import "account/dto/request/check-profile-by-email-request.proto";
import "account/dto/request/check-profile-by-account-id-request.proto";
import "account/dto/response/check-profile-by-account-id-response.proto";
import "account/dto/response/check-profile-by-email-response.proto";

service AccountProfileCheckService {
  rpc CheckProfileByAccountId (request.CheckProfileByAccountIdRequest) returns (response.CheckProfileByAccountIdResponse) {};
  rpc CheckProfileByEmail (request.CheckProfileByEmailRequest) returns (response.CheckProfileByEmailResponse){};
}