syntax = "proto3";

package response;

option java_multiple_files = true;
option java_package = "grpc.account.dto.response";

import "account/dto/response/profile-response.proto";

message CheckProfileByAccountIdResponse {
  bool is_exists_account_id = 1;
  response.ProfileResponse profile = 2;
}